--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>People entered:</h1>
+        <h1>Count it up:</h1>
         <h2 id="count-el">0</h2>
         <button id="increment-btn" onclick="increment()">GROWTH</button>
         <button id="save-btn" onclick="save()">SAVE</button>
         <p id="save-el">Previous entries: </p>
+        <p id="message-el">Do you want to count how many push-ups, squats, and jumps you do? Do you need several results because you do a different amount in each series? Count it up!</p>
         <script src="index.js">
             
             
