adding a paragraph + changing the operation of the application

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
         <h2 id="count-el">0</h2>
         <button id="increment-btn" onclick="increment()">GROWTH</button>
         <button id="save-btn" onclick="save()">SAVE</button>
-        <p id="save-el">Previous entries: </p>
-        <p id="message-el">Do you want to count how many push-ups, squats, and jumps you do? Do you need several results because you do a different amount in each series? Count it up!</p>
+        <h3 id="save-el">Previous entries: </h3>
+        <p id="message-about">Do you want to count how many push-ups, squats, and jumps you do? Do you need several results because you do a different amount in each series? Count it up!</p>
         <script src="index.js">
-            
-            
         </script>
     </body>
 </html>
